// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Krumbs renders an icon breadcrumb 1`] = `
<ul class="krumbs">
  <li class="krumb-item truncate"><a title="Go to Kong Docs" href="https://docs.konghq.com" target="_blank" class="no-underline"><span class="kong-icon kong-icon-kong breadcrumb-icon has-no-text"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
  <title>Kong</title>
  <path fill-rule="evenodd" clip-rule="evenodd" d="m16.28 36.66 1-1.3h7.45l3.88 4.96-.7 1.68h-9.6l.24-1.68-2.27-3.66Z" fill="#169FCC"></path>
  <path fill-rule="evenodd" clip-rule="evenodd" d="m18.55 19.75 3.6-6.21h4.19L45.1 35.35 43.65 42H35.6l.5-1.87-17.55-20.38Z" fill="#14B59A"></path>
  <path fill-rule="evenodd" clip-rule="evenodd" d="m22.92 12.36 1.72-3.19L29.8 5l8.85 6.94-1.15 1.17 1.54 2.13v2.28l-4.4 3.6-7.4-8.76h-4.32Z" fill="#1BC263"></path>
  <path fill-rule="evenodd" clip-rule="evenodd" d="M9.25 26.23h2.33l6.1-5.1 8.08 9.4-2.28 3.41h-7.46l-5.15 6.55L9.7 42H3v-8.03l6.25-7.74Z" fill="#16BDCC"></path>
</svg>
</span>
      <!----></a> <span class="kong-icon kong-icon-chevronRight"><svg viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
  <title>Forward</title>
  <path d="m7.3 14.7 5-5.2-5-5.2" fill="none" stroke="#A3BBCC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
</svg>
</span></li>
</ul>
`;

exports[`Krumbs renders breadcrumb links 1`] = `
<ul class="krumbs">
  <li class="krumb-item truncate"><a href="/services" class="" title="Services">
      <!----> <span class="breadcrumb-text truncate" style="max-width: 38ch;">Services</span></a> <span class="kong-icon kong-icon-chevronRight"><svg viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
  <title>Forward</title>
  <path d="m7.3 14.7 5-5.2-5-5.2" fill="none" stroke="#A3BBCC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
</svg>
</span></li>
  <li class="krumb-item truncate"><a title="Go to Kong Docs" href="https://docs.konghq.com" target="_blank" class="">
      <!----> <span class="breadcrumb-text truncate" style="max-width: 38ch;">External Link</span></a> <span class="kong-icon kong-icon-chevronRight"><svg viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
  <title>Forward</title>
  <path d="m7.3 14.7 5-5.2-5-5.2" fill="none" stroke="#A3BBCC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
</svg>
</span></li>
</ul>
`;

exports[`Krumbs renders breadcrumb links without needing a router 1`] = `
<ul class="krumbs">
  <li class="krumb-item truncate"><a title="Go to Kong Docs" href="https://docs.konghq.com" target="_blank" class="">
      <!----> <span class="breadcrumb-text truncate" style="max-width: 38ch;">External Link</span></a> <span class="kong-icon kong-icon-chevronRight"><svg viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
  <title>Forward</title>
  <path d="m7.3 14.7 5-5.2-5-5.2" fill="none" stroke="#A3BBCC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
</svg>
</span></li>
</ul>
`;
